--- a/node_pie/node_def_files/builtin/CompositorNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/CompositorNodeTree.jsonc
@@ -1,8 +1,8 @@
 {
   "layout": {
     "left": [
-      ["CONVERTOR", "LAYOUT"],
-      ["DISTORT", "VECTOR"]
+      ["DISTORT", "LAYOUT"],
+      ["CONVERTOR", "VECTOR"]
     ],
     "right": [["INPUT", "OUTPUT"], ["FILTER"]],
     "top": [["COLOR"]],
@@ -50,7 +50,17 @@
         { "identifier": "CompositorNodeHueCorrect" },
         { "identifier": "CompositorNodeHueSat" },
         { "identifier": "CompositorNodeInvert" },
-        { "identifier": "CompositorNodeMixRGB" },
+        {
+          "identifier": "CompositorNodeMixRGB",
+          "variants": {
+            "Add": { "blend_type": "ADD" },
+            "Subtract": { "blend_type": "SUBTRACT" },
+            "Multiply": { "blend_type": "MULTIPLY" },
+            "Divide": { "blend_type": "DIVIDE" },
+            "Overlay": { "blend_type": "OVERLAY" },
+            "Linear Light": { "blend_type": "LINEAR_LIGHT" }
+          }
+        },
         { "identifier": "CompositorNodePosterize" },
         { "identifier": "CompositorNodeCurveRGB" },
         { "identifier": "CompositorNodeTonemap" },
@@ -67,7 +77,41 @@
         { "identifier": "CompositorNodeCombineColor" },
         { "identifier": "CompositorNodeCombineXYZ" },
         { "identifier": "CompositorNodeIDMask" },
-        { "identifier": "CompositorNodeMath" },
+        {
+          "identifier": "CompositorNodeMath",
+          "variants": {
+            "Negate": {
+              "operation": "MULTIPLY",
+              "show_options": false,
+              "label": "Negate",
+              "inputs[1].hide": true,
+              "inputs[1].default_value": -1
+            },
+            "One Minus": {
+              "operation": "SUBTRACT",
+              "show_options": false,
+              "label": "One Minus",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": 1
+            },
+            "One Over": {
+              "operation": "DIVIDE",
+              "show_options": false,
+              "label": "One Over",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": 1
+            },
+            "separator": true,
+            "Multiply": { "operation": "MULTIPLY" },
+            "Divide": { "operation": "DIVIDE" },
+            "Subtract": { "operation": "SUBTRACT" },
+            "Modulo": { "operation": "MODULO" },
+            "Absolute": { "operation": "ABSOLUTE" },
+            "Power": { "operation": "POWER" },
+            "Sine": { "operation": "SINE" },
+            "Cosine": { "operation": "COSINE" }
+          }
+        },
         { "identifier": "CompositorNodeRGBToBW" },
         { "identifier": "CompositorNodeSeparateColor" },
         { "identifier": "CompositorNodeSeparateXYZ" },
