--- a/node_pie/node_def_files/builtin/ShaderNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree.jsonc
@@ -102,7 +102,16 @@
         { "identifier": "ShaderNodeInvert" },
         {
           "identifier": "ShaderNodeMix",
-          "settings": {"data_type": "RGBA"}
+          "settings": { "data_type": "RGBA" },
+          "color": "color",
+          "variants": {
+            "Add": { "blend_type": "ADD" },
+            "Subtract": { "blend_type": "SUBTRACT" },
+            "Multiply": { "blend_type": "MULTIPLY" },
+            "Divide": { "blend_type": "DIVIDE" },
+            "Overlay": { "blend_type": "OVERLAY" },
+            "Linear Light": { "blend_type": "LINEAR_LIGHT" }
+          }
         },
         { "identifier": "ShaderNodeRGBCurve" },
         { "separator": true, "label": "Cycles" },
@@ -121,7 +130,44 @@
         { "identifier": "ShaderNodeVectorCurve" },
         { "identifier": "ShaderNodeVectorDisplacement" },
         { "identifier": "ShaderNodeVectorRotate" },
-        { "identifier": "ShaderNodeVectorTransform" }
+        { "identifier": "ShaderNodeVectorTransform" },
+        {
+          "identifier": "ShaderNodeVectorMath",
+          "variants": {
+            "Negate": {
+              "operation": "SCALE",
+              "show_options": false,
+              "label": "Negate",
+              "inputs[1].hide": true,
+              "inputs[1].default_value": -1
+            },
+            "One Minus": {
+              "operation": "SUBTRACT",
+              "show_options": false,
+              "label": "One Minus",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": [1, 1, 1]
+            },
+            "One Over": {
+              "operation": "DIVIDE",
+              "show_options": false,
+              "label": "One Over",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": [1, 1, 1]
+            },
+            "separator": true,
+            "Multiply": { "operation": "MULTIPLY" },
+            "Divide": { "operation": "DIVIDE" },
+            "Subtract": { "operation": "SUBTRACT" },
+            "Scale": { "operation": "SCALE" },
+            "Dot Product": { "operation": "DOT_PRODUCT" },
+            "Cross Product": { "operation": "CROSS_PRODUCT" },
+            "Normalize": { "operation": "NORMALIZE" },
+            "Absolute": { "operation": "ABSOLUTE" },
+            "Distance": { "operation": "DISTANCE" },
+            "Length": { "operation": "LENGTH" }
+          }
+        }
       ]
     },
     "CONVERTOR": {
@@ -135,12 +181,66 @@
         { "identifier": "ShaderNodeCombineXYZ", "color": "converter" },
         { "identifier": "ShaderNodeFloatCurve" },
         { "identifier": "ShaderNodeMapRange" },
-        { "identifier": "ShaderNodeMath" },
+        {
+          "identifier": "ShaderNodeMath",
+          "variants": {
+            "Negate": {
+              "operation": "MULTIPLY",
+              "show_options": false,
+              "label": "Negate",
+              "inputs[1].hide": true,
+              "inputs[1].default_value": -1
+            },
+            "One Minus": {
+              "operation": "SUBTRACT",
+              "show_options": false,
+              "label": "One Minus",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": 1
+            },
+            "One Over": {
+              "operation": "DIVIDE",
+              "show_options": false,
+              "label": "One Over",
+              "inputs[0].hide": true,
+              "inputs[0].default_value": 1
+            },
+            "separator": true,
+            "Multiply": { "operation": "MULTIPLY" },
+            "Divide": { "operation": "DIVIDE" },
+            "Subtract": { "operation": "SUBTRACT" },
+            "Modulo": { "operation": "MODULO" },
+            "Absolute": { "operation": "ABSOLUTE" },
+            "Power": { "operation": "POWER" },
+            "Sine": { "operation": "SINE" },
+            "Cosine": { "operation": "COSINE" }
+          }
+        },
         { "identifier": "ShaderNodeMix" },
         { "identifier": "ShaderNodeRGBToBW" },
         { "identifier": "ShaderNodeSeparateColor" },
-        { "identifier": "ShaderNodeSeparateXYZ", "color": "converter" },
-        { "identifier": "ShaderNodeVectorMath" },
+        {
+          "identifier": "ShaderNodeSeparateXYZ",
+          "color": "converter",
+          "variants": {
+            "X": {
+              "outputs[1].hide": true,
+              "outputs[2].hide": true,
+              "label": "Get X"
+            },
+            "Y": {
+              "outputs[0].hide": true,
+              "outputs[2].hide": true,
+              "label": "Get Y"
+            },
+            "Z": {
+              "outputs[0].hide": true,
+              "outputs[1].hide": true,
+              "label": "Get Z"
+            }
+          }
+        },
+
         { "identifier": "ShaderNodeWavelength" },
         { "separator": true, "label": "Eevee" },
         { "identifier": "ShaderNodeShaderToRGB" }
