--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
@@ -1,4 +1,5 @@
 // This is a versioning file that only specifies the new nodes in 4.0, compared to the base file.
+// Adds the new nodes, and also replaces the simulation category with one for all zones.
 {
   "blender_version": [4, 0, 0],
   "removals": {
