--- a/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
@@ -1,5 +1,17 @@
 {
   "layout": {
+    // "left": [
+    //   ["INPUT", "LAYOUT"],
+    //   ["ATTRIBUTE", "TEXTURE", "COLOR", "UV"],
+    //   ["VECTOR", "UTILITIES"]
+    // ],
+    // "right": [
+    //   ["CURVE", "POINT"],
+    //   ["MESH"],
+    //   ["PRIMITIVES_MESH", "PRIMITIVES_CURVE", "MATERIAL", "TEXT"]
+    // ],
+    // "top": [["GEOMETRY"]],
+    // "bottom": [["INSTANCE", "VOLUME"]]
     "left": [
       ["INPUT", "LAYOUT"],
       ["ATTRIBUTE", "TEXTURE", "COLOR", "UV"],
