Hopefully fixed shaders on MacOS. Refactored draw_add_node_button. Fixed variants not working

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_3_6.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_3_6.jsonc
@@ -3,7 +3,7 @@
   "blender_version": [3, 6, 0],
   "additions": {
     "layout": {
-      "left": [[], ["SIMULATION"]]
+      "right": [[], [], ["SIMULATION"]]
     },
     "categories": {
       "GEOMETRY": {
