Added mix node to the rotation category

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
@@ -20,6 +20,10 @@
         "color": "converter",
         "nodes": [
           { "identifier": "FunctionNodeInvertRotation" },
+          {
+            "identifier": "ShaderNodeMix",
+            "settings": { "data_type": "ROTATION" }
+          },
           { "identifier": "FunctionNodeRotateVector" },
           { "identifier": "FunctionNodeRotationToAxisAngle" },
           { "identifier": "FunctionNodeAxisAngleToRotation" },
