Fixed to work with 4.0 again

--- a/node_pie/node_def_files/builtin/ShaderNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree_4_0.jsonc
@@ -9,6 +9,7 @@
     "categories": {
       "SHADER": {
         "nodes": [
+          { "identifier": "ShaderNodeBsdfVelvet" },
           { "identifier": "ShaderNodeBsdfAnisotropic" },
           { "identifier": "ShaderNodeBsdfGlossy" }
         ]
