Allowed custom poll conditions for entire categories

--- a/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
@@ -12,7 +12,11 @@
     // ],
     // "top": [["GEOMETRY"]],
     // "bottom": [["INSTANCE", "VOLUME"]]
-    "left": [["CURVE", "UV", "LAYOUT"], ["MESH"], ["POINT", "UTILITIES", "INSTANCE"]],
+    "left": [
+      ["CURVE", "UV", "LAYOUT"],
+      ["MESH"],
+      ["POINT", "UTILITIES", "INSTANCE"]
+    ],
     "right": [
       ["INPUT", "COLOR"],
       ["PRIMITIVES_MESH", "GEOMETRY", "VOLUME"],
