Added initial support for icons

--- a/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
@@ -29,6 +29,7 @@
     "ATTRIBUTE": {
       "label": "Attribute",
       "color": "attribute",
+      "icon": "GHOST_ENABLED",
       "nodes": [
         { "identifier": "GeometryNodeAttributeStatistic" },
         {
