--- a/node_pie/node_def_files/builtin/GeometryNodeTree_3_6.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_3_6.jsonc
@@ -17,6 +17,7 @@
       "SIMULATION": {
         "label": "Simulation",
         "color": "layout",
+        "icon": "PHYSICS",
         "nodes": [
           {
             "label": "Simulation Zone",
