--- a/node_pie/node_def_files/builtin/ShaderNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree.jsonc
@@ -1,6 +1,6 @@
 {
   "layout": {
-    "left": [["TEXTURE", "SCRIPT", "LAYOUT"], ["CONVERTOR"]],
+    "left": [["TEXTURE","LAYOUT"], ["CONVERTOR", "SCRIPT"]],
     "right": [["INPUT"], ["SHADER"]],
     "top": [["VECTOR"]],
     "bottom": [["COLOR"]]
