Added new geometry nodes in 4.1

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
@@ -19,6 +19,23 @@
   "additions": {
     "layout": {
       "right": [[], ["UV"]]
+    },
+    "categories": {
+      "GEOMETRY": {
+        "nodes": [
+          {"identifier": "GeometryNodeSplitToInstances", "after_node": "GeometryNodeSeparateGeometry"}
+        ]
+      },
+      "UTILITIES": {
+        "nodes": [
+          { "identifier": "GeometryNodeIndexSwitch", "before_node": "GeometryNodeSwitch"}
+        ]
+      },
+      "INPUT": {
+        "nodes": [
+          { "identifier": "GeometryNodeInputActiveCamera", "before_node": "GeometryNodeCollectionInfo" }
+        ]
+      }
     }
   }
 }
