Fixed bug with compositor not working in 4.0

--- a/node_pie/node_def_files/builtin/CompositorNodeTree_4_1.jsonc
+++ b/node_pie/node_def_files/builtin/CompositorNodeTree_4_1.jsonc
@@ -2,5 +2,8 @@
   "blender_version": [4, 1, 0],
   "removals": {
     "nodes": ["CompositorNodeSplitViewer"]
+  },
+  "additions": {
+    "nodes": [{ "identifier": "CompositorNodeSplit" }]
   }
 }
