--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -2,7 +2,7 @@ schema_version = "1.0.0"
 
 # Example of manifest file for a Blender extension
 # Change the values according to your extension
-id = "node_pie"
+id = "NodePie"
 version = "1.2.27"
 name = "Node Pie"
 tagline = "Add nodes visually with a pie menu"
